--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ body {
 }
 @keyframes slideIn {
   0% {
-    transform: translateX(-100%);
+    transform: rotate(0deg);
   }
   100% {
-    transform: translateX(0);
+    transform: rotate(360deg);
   }
 }
 
